<resources>
  <string name="app_name">Fitness App</string>
  <string name="dumbbell_icon">Dumbbell Icon</string>
  <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nunc_gravida_lobortis_nisl_ac_pellentesque">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc gravida lobortis nisl, ac pellentesque.</string>
  <string name="log_in">Log In</string>
  <string name="sign_in">Sign In</string>
  <string name="login">LOGIN</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="don_t_have_an_account">Don’t have an account?</string>
  <string name="sign_up">Sign Up</string>
  <string name="sign_up_title">SIGN UP</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="already_have_an_account">Already have an account?</string>
  <string name="name">Name</string>
  <string name="login_back">Login</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="welcome_text">Welcome Back</string>
  <string name="workout_log">Workout Log</string>
  <string name="nutrition_track">Nutrition Track</string>
  <string name="workout_schedule">Workout Schedule</string>
  <string name="user_info">User Info</string>
  <string name="routines">Routines</string>
  <string name="back_button">Back Button</string>
  <string name="create_routine">Create Routine</string>
  <string name="create_routine_btn">Create Routine Btn</string>
  <string name="set_as_current_routine">Set As Current Routine</string>
  <string name="monday">Monday</string>
  <string name="settings">Settings</string>
  <string name="user_settings">User Settings</string>
  <string name="chat_settings">Chat Settings</string>
  <string name="health_information">Health Information</string>
  <string name="about">About</string>
  <string name="sign_out">Sign Out</string>
  <string name="the_ultimate_all_in_one_fitness_application_to_track_your_physical_health_workouts_and_nutrition">The ultimate all in one fitness application to track your physical health, workouts, and nutrition.</string>
  <string name="chat">Chat</string>
  <string name="general">General</string>
  <string name="fitness">Fitness</string>
  <string name="nutrition">Nutrition</string>
  <string name="health">Health</string>
  <string name="view_routine">View Routine</string>
</resources>