<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/dumbbell"
        android:layout_width="190dp"
        android:layout_height="193dp"
        android:contentDescription="@string/dumbbell_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@mipmap/dumbbell_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="308dp"
        android:layout_height="231dp"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="14sp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nunc_gravida_lobortis_nisl_ac_pellentesque"
        android:textColor="@color/primary_text"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <Button
        android:id="@+id/login_main"
        android:layout_width="244dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/montserrat_bold"
        android:onClick="loginScreen"
        android:text="@string/log_in"
        android:textColor="@color/primary_text"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="244dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in"
        android:textColor="@color/primary_text"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.568" />
</androidx.constraintlayout.widget.ConstraintLayout>