<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primary_bg"
  tools:context=".menu.Home" >
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/spinner_routines"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="121dp"
      android:layout_height="78dp"
      android:indeterminate="false"
      android:indeterminateTint="@color/primary_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/home_ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
      android:id="@+id/user_info_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:contentDescription="@string/user_info"
      android:src="@drawable/user_info"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.171"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.821" />
    <ImageButton
      android:id="@+id/routines_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:contentDescription="@string/workout_log"
      android:src="@drawable/workout_info"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.171"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.243" />
    <ImageButton
      android:id="@+id/health_information_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:contentDescription="@string/health"
      android:src="@drawable/health_track"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.818"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.526" />
    <ImageButton
      android:id="@+id/workout_log_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:contentDescription="@string/workout_log"
      android:src="@drawable/workout_log"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.171"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.526" />
    <ImageButton
      android:id="@+id/schedule_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:contentDescription="@string/workout_schedule"
      android:src="@drawable/workout_schedule"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.818"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.243" />
    <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat"
      android:text="@string/welcome_text"
      android:textColor="@color/primary_text"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/user_text"
      app:layout_constraintTop_toBottomOf="@+id/user_text"
      app:layout_constraintVertical_bias="0.0" />
    <TextView
      android:id="@+id/user_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat_bold"
      android:textColor="@color/red"
      android:textSize="32sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.211"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.036" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>